cgo/include/urnetwork_sdk.h


char* urnet_version(void);
int32_t urnet_abi_version(void);
void urnet_free_string(char* s);
bool urnet_release(uint64_t handle);
int64_t urnet_live_handle_count(void);
uint64_t urnet_device_dial(uint64_t self, const char* network, const char* address, int64_t timeout_millis, char** out_error);
uint64_t urnet_device_dial_tls(uint64_t self, const char* network, const char* address, int64_t timeout_millis, const char* tls_json, char** out_error);
int32_t urnet_conn_read(uint64_t self, uint8_t* out, int32_t capacity, bool* eof, char** out_error);
int32_t urnet_conn_write(uint64_t self, const uint8_t* data, int32_t length, char** out_error);
bool urnet_conn_set_deadline(uint64_t self, int64_t epoch_millis, char** out_error);
bool urnet_conn_set_read_deadline(uint64_t self, int64_t epoch_millis, char** out_error);
bool urnet_conn_set_write_deadline(uint64_t self, int64_t epoch_millis, char** out_error);
bool urnet_conn_close(uint64_t self, char** out_error);
bool urnet_conn_close_read(uint64_t self, char** out_error);
bool urnet_conn_close_write(uint64_t self, char** out_error);
char* urnet_conn_local_addr(uint64_t self);
char* urnet_conn_remote_addr(uint64_t self);
bool urnet_decode_base58(const char* s, uint8_t* out, int32_t* inout_len);
bool urnet_decrypt_data(const char* encrypted_data_base58, const char* nonce_base58, const char* shared_secret_base58, uint8_t* out, int32_t* inout_len, char** out_error);
bool urnet_generate_shared_secret(const uint8_t* private_key, int32_t private_key_len, const uint8_t* public_key, int32_t public_key_len, uint8_t* out, int32_t* inout_len, char** out_error);
bool urnet_device_local_get_client_key_seed(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_get_provide_tls_certificate_pem(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_get_provide_tls_private_key_pem(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_get_extender_key_seed(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_key_material_get_client_key_seed(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_key_material_get_provide_tls_certificate_pem(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_key_material_get_provide_tls_private_key_pem(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_key_material_get_extender_key_seed(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_render_identicon_png(const uint8_t* input, int32_t input_len, int32_t size, uint8_t* out, int32_t* inout_len, char** out_error);
bool urnet_device_get_public_identity_key(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_packet_batch_get(uint64_t self, int64_t index, uint8_t* out, int32_t* inout_len);
typedef void (*urnet_account_epochs_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_account_preferences_get_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_account_preferences_set_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_add_auth_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_allow_product_updates_cb)(void* user_data, bool p0);
typedef void (*urnet_auth_code_create_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_auth_code_login_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_auth_login_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_auth_login_with_password_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_auth_logout_cb)(void* user_data);
typedef void (*urnet_auth_network_client_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_jwt_refresh_cb)(void* user_data, const char* jwt);
typedef void (*urnet_provider_transport_settings_change_cb)(void* user_data, const char* transport_settings_json);
typedef void (*urnet_provider_transport_status_change_cb)(void* user_data, const char* transport_status_json);
typedef void (*urnet_purchase_confirmation_cb)(void* user_data, const char* state);
typedef void (*urnet_receive_packet_cb)(void* user_data, int64_t ip_version, int64_t ip_protocol, const uint8_t* packet, int32_t packet_len);
typedef void (*urnet_receive_packet_batch_cb)(void* user_data, const uint8_t* packet_batch_bytes, int32_t packet_batch_bytes_len);
typedef void (*urnet_receive_packets_cb)(void* user_data, uint64_t packet_batch);
typedef void (*urnet_redeem_balance_code_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_referral_code_cb)(void* user_data, const char* p0);
typedef void (*urnet_refresh_jwt_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_regenerate_seedphrase_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_remote_change_cb)(void* user_data, bool remote_connected);
typedef void (*urnet_remove_auth_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_remove_network_client_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_remove_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_route_local_change_cb)(void* user_data, bool route_local);
typedef void (*urnet_selected_location_cb)(void* user_data, const char* location_json);
typedef void (*urnet_selected_provider_location_change_cb)(void* user_data);
typedef void (*urnet_send_feedback_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_set_emoji_tag_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_set_network_leaderboard_public_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_set_network_referral_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_set_payout_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_set_points_leaderboard_public_cb)(void* user_data, const char* result_json, const char* err_param);
typedef bool (*urnet_setup_new_device_cb)(void* user_data, uint64_t device, const char* proxy_config_result_json);
typedef void (*urnet_sn_claim_confirmed_cb)(void* user_data, int64_t epoch, const char* tx_hash, int64_t amount_rao);
typedef void (*urnet_sn_claim_done_cb)(void* user_data);
typedef void (*urnet_sn_claim_failed_cb)(void* user_data, int64_t epoch, const char* message);
typedef void (*urnet_sn_claim_sent_cb)(void* user_data, int64_t epoch, const char* tx_hash);
typedef void (*urnet_sn_claims_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_sn_connect_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_sn_epoch_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_sn_gas_balance_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_sn_get_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_sn_head_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_sn_set_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_sn_validate_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_sn_wallet_change_cb)(void* user_data, const char* wallet_json);
typedef void (*urnet_solana_payment_intent_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_stripe_create_checkout_session_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_stripe_create_customer_portal_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_stripe_payment_intent_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_stripe_payment_sheet_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_stripe_prices_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_subprotocol_cb)(void* user_data, int64_t subprotocol_id, const char* source_client_id, const uint8_t* message_bytes, int32_t message_bytes_len);
typedef void (*urnet_subprotocols_query_cb)(void* user_data, const char* subprotocol_ids_json, bool ok_param);
typedef void (*urnet_subscription_balance_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_subscription_balance_change_cb)(void* user_data);
typedef void (*urnet_subscription_create_payment_id_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_subscription_jwt_out_of_sync_cb)(void* user_data, bool server_is_pro);
typedef void (*urnet_throughput_cb)(void* user_data);
typedef void (*urnet_transport_settings_change_cb)(void* user_data, const char* transport_settings_json);
typedef void (*urnet_transport_status_change_cb)(void* user_data, const char* transport_status_json);
typedef void (*urnet_tunnel_change_cb)(void* user_data, bool tunnel_started);
typedef void (*urnet_unlink_referral_network_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_unpaid_byte_count_cb)(void* user_data, int64_t p0);
typedef void (*urnet_upgrade_guest_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_upgrade_guest_existing_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_upload_logs_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_validate_address_cb)(void* user_data, bool valid);
typedef void (*urnet_validate_referral_code_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_verify_apple_transaction_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_verify_play_purchase_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_verify_seeker_nft_holder_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_view_controller_close_cb)(void* user_data);
typedef void (*urnet_view_controller_start_cb)(void* user_data);
typedef void (*urnet_view_controller_stop_cb)(void* user_data);
typedef void (*urnet_vpn_interface_while_offline_change_cb)(void* user_data, bool vpn_interface_while_offline);
typedef void (*urnet_wallet_balance_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_wallet_circle_init_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_wallet_circle_transfer_out_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_wallet_validate_address_cb)(void* user_data, const char* result_json, const char* err_param);
typedef void (*urnet_window_status_change_cb)(void* user_data, const char* window_status_json);
uint64_t urnet_account_preferences_view_controller_add_allow_product_updates_listener(uint64_t self, urnet_allow_product_updates_cb listener_state_changed, void* listener_user_data);
void urnet_account_preferences_view_controller_close(uint64_t self);
bool urnet_account_preferences_view_controller_get_allow_product_updates(uint64_t self);
void urnet_account_preferences_view_controller_start(uint64_t self);
void urnet_account_preferences_view_controller_stop(uint64_t self);
void urnet_account_preferences_view_controller_update_allow_product_updates(uint64_t self, bool allow);
void urnet_account_view_controller_close(uint64_t self);
void urnet_account_view_controller_start(uint64_t self);
void urnet_account_view_controller_stop(uint64_t self);
void urnet_account_view_controller_wallet_validate_address(uint64_t self, const char* address, urnet_wallet_validate_address_cb callback_result, void* callback_user_data);
void urnet_api_account_epochs(uint64_t self, urnet_account_epochs_cb callback_result, void* callback_user_data);
void urnet_api_account_preferences_get(uint64_t self, urnet_account_preferences_get_cb callback_result, void* callback_user_data);
void urnet_api_account_preferences_update(uint64_t self, const char* account_preferences_json, urnet_account_preferences_set_cb callback_result, void* callback_user_data);
void urnet_api_add_auth(uint64_t self, const char* args_json, urnet_add_auth_cb callback_result, void* callback_user_data);
uint64_t urnet_api_add_auth_logout_listener(uint64_t self, urnet_auth_logout_cb listener_auth_logout, void* listener_user_data);
uint64_t urnet_api_add_jwt_refresh_listener(uint64_t self, urnet_jwt_refresh_cb listener_jwt_refreshed, void* listener_user_data);
void urnet_api_auth_code_create(uint64_t self, const char* code_create_args_json, urnet_auth_code_create_cb callback_result, void* callback_user_data);
void urnet_api_auth_code_login(uint64_t self, const char* args_json, urnet_auth_code_login_cb callback_result, void* callback_user_data);
void urnet_api_auth_login(uint64_t self, const char* auth_login_json, urnet_auth_login_cb callback_result, void* callback_user_data);
void urnet_api_auth_login_with_password(uint64_t self, const char* auth_login_with_password_json, urnet_auth_login_with_password_cb callback_result, void* callback_user_data);
void urnet_api_auth_network_client(uint64_t self, const char* auth_network_client_json, urnet_auth_network_client_cb callback_result, void* callback_user_data);
char* urnet_api_auth_network_client_sync(uint64_t self, const char* auth_network_client_json, char** out_error);
typedef void (*urnet_io_loop_done_cb)(void* user_data);