java/src/main/java/io/ur/sdk/Raw.java

  interface urnet_provider_transport_settings_change_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_provider_transport_status_change_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_purchase_confirmation_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_receive_packet_cb extends Callback { void invoke(Pointer a0, long a1, long a2, Pointer a3, int a4); }
  interface urnet_receive_packet_batch_cb extends Callback { void invoke(Pointer a0, Pointer a1, int a2); }
  interface urnet_receive_packets_cb extends Callback { void invoke(Pointer a0, long a1); }
  interface urnet_redeem_balance_code_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_referral_code_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_refresh_jwt_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_regenerate_seedphrase_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_remote_change_cb extends Callback { void invoke(Pointer a0, byte a1); }
  interface urnet_remove_auth_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_remove_network_client_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_remove_wallet_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_route_local_change_cb extends Callback { void invoke(Pointer a0, byte a1); }
  interface urnet_selected_location_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_selected_provider_location_change_cb extends Callback { void invoke(Pointer a0); }
  interface urnet_send_feedback_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_set_emoji_tag_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_set_network_leaderboard_public_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_set_network_referral_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_set_payout_wallet_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_set_points_leaderboard_public_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_setup_new_device_cb extends Callback { byte invoke(Pointer a0, long a1, String a2); }
  interface urnet_sn_claim_confirmed_cb extends Callback { void invoke(Pointer a0, long a1, String a2, long a3); }
  interface urnet_sn_claim_done_cb extends Callback { void invoke(Pointer a0); }
  interface urnet_sn_claim_failed_cb extends Callback { void invoke(Pointer a0, long a1, String a2); }
  interface urnet_sn_claim_sent_cb extends Callback { void invoke(Pointer a0, long a1, String a2); }
  interface urnet_sn_claims_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_sn_connect_wallet_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_sn_epoch_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_sn_gas_balance_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_sn_get_wallet_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_sn_head_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_sn_set_wallet_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_sn_validate_wallet_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_sn_wallet_change_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_solana_payment_intent_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_stripe_create_checkout_session_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_stripe_create_customer_portal_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_stripe_payment_intent_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_stripe_payment_sheet_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_stripe_prices_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_subprotocol_cb extends Callback { void invoke(Pointer a0, long a1, String a2, Pointer a3, int a4); }
  interface urnet_subprotocols_query_cb extends Callback { void invoke(Pointer a0, String a1, byte a2); }
  interface urnet_subscription_balance_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_subscription_balance_change_cb extends Callback { void invoke(Pointer a0); }
  interface urnet_subscription_create_payment_id_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_subscription_jwt_out_of_sync_cb extends Callback { void invoke(Pointer a0, byte a1); }
  interface urnet_throughput_cb extends Callback { void invoke(Pointer a0); }
  interface urnet_transport_settings_change_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_transport_status_change_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_tunnel_change_cb extends Callback { void invoke(Pointer a0, byte a1); }
  interface urnet_unlink_referral_network_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_unpaid_byte_count_cb extends Callback { void invoke(Pointer a0, long a1); }
  interface urnet_upgrade_guest_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_upgrade_guest_existing_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_upload_logs_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_validate_address_cb extends Callback { void invoke(Pointer a0, byte a1); }
  interface urnet_validate_referral_code_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_verify_apple_transaction_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_verify_play_purchase_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_verify_seeker_nft_holder_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_view_controller_close_cb extends Callback { void invoke(Pointer a0); }
  interface urnet_view_controller_start_cb extends Callback { void invoke(Pointer a0); }
  interface urnet_view_controller_stop_cb extends Callback { void invoke(Pointer a0); }
  interface urnet_vpn_interface_while_offline_change_cb extends Callback { void invoke(Pointer a0, byte a1); }
  interface urnet_wallet_balance_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_wallet_circle_init_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_wallet_circle_transfer_out_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_wallet_validate_address_cb extends Callback { void invoke(Pointer a0, String a1, String a2); }
  interface urnet_window_status_change_cb extends Callback { void invoke(Pointer a0, String a1); }
  interface urnet_io_loop_done_cb extends Callback { void invoke(Pointer a0); }
  Pointer urnet_version();
  int urnet_abi_version();
  void urnet_free_string(Pointer a0);
  byte urnet_release(long a0);
  long urnet_live_handle_count();
  long urnet_device_dial(long a0, String a1, String a2, long a3, PointerByReference a4);
  long urnet_device_dial_tls(long a0, String a1, String a2, long a3, String a4, PointerByReference a5);
  int urnet_conn_read(long a0, Pointer a1, int a2, ByteByReference a3, PointerByReference a4);
  int urnet_conn_write(long a0, Pointer a1, int a2, PointerByReference a3);
  byte urnet_conn_set_deadline(long a0, long a1, PointerByReference a2);
  byte urnet_conn_set_read_deadline(long a0, long a1, PointerByReference a2);
  byte urnet_conn_set_write_deadline(long a0, long a1, PointerByReference a2);
  byte urnet_conn_close(long a0, PointerByReference a1);
  byte urnet_conn_close_read(long a0, PointerByReference a1);
  byte urnet_conn_close_write(long a0, PointerByReference a1);
  Pointer urnet_conn_local_addr(long a0);
  Pointer urnet_conn_remote_addr(long a0);
  byte urnet_decode_base58(String a0, Pointer a1, IntByReference a2);
  byte urnet_decrypt_data(String a0, String a1, String a2, Pointer a3, IntByReference a4, PointerByReference a5);
  byte urnet_generate_shared_secret(Pointer a0, int a1, Pointer a2, int a3, Pointer a4, IntByReference a5, PointerByReference a6);
  byte urnet_device_local_get_client_key_seed(long a0, Pointer a1, IntByReference a2);
  byte urnet_device_local_get_provide_tls_certificate_pem(long a0, Pointer a1, IntByReference a2);
  byte urnet_device_local_get_provide_tls_private_key_pem(long a0, Pointer a1, IntByReference a2);
  byte urnet_device_local_get_extender_key_seed(long a0, Pointer a1, IntByReference a2);
  byte urnet_device_local_key_material_get_client_key_seed(long a0, Pointer a1, IntByReference a2);
  byte urnet_device_local_key_material_get_provide_tls_certificate_pem(long a0, Pointer a1, IntByReference a2);
  byte urnet_device_local_key_material_get_provide_tls_private_key_pem(long a0, Pointer a1, IntByReference a2);
  byte urnet_device_local_key_material_get_extender_key_seed(long a0, Pointer a1, IntByReference a2);
  byte urnet_render_identicon_png(Pointer a0, int a1, int a2, Pointer a3, IntByReference a4, PointerByReference a5);
  byte urnet_device_get_public_identity_key(long a0, Pointer a1, IntByReference a2);
  byte urnet_packet_batch_get(long a0, long a1, Pointer a2, IntByReference a3);
  long urnet_account_preferences_view_controller_add_allow_product_updates_listener(long a0, urnet_allow_product_updates_cb a1, Pointer a2);
  void urnet_account_preferences_view_controller_close(long a0);
  byte urnet_account_preferences_view_controller_get_allow_product_updates(long a0);
  void urnet_account_preferences_view_controller_start(long a0);
  void urnet_account_preferences_view_controller_stop(long a0);
  void urnet_account_preferences_view_controller_update_allow_product_updates(long a0, byte a1);
  void urnet_account_view_controller_close(long a0);
  void urnet_account_view_controller_start(long a0);
  void urnet_account_view_controller_stop(long a0);
  void urnet_account_view_controller_wallet_validate_address(long a0, String a1, urnet_wallet_validate_address_cb a2, Pointer a3);
  void urnet_api_account_epochs(long a0, urnet_account_epochs_cb a1, Pointer a2);
  void urnet_api_account_preferences_get(long a0, urnet_account_preferences_get_cb a1, Pointer a2);
  void urnet_api_account_preferences_update(long a0, String a1, urnet_account_preferences_set_cb a2, Pointer a3);
  void urnet_api_add_auth(long a0, String a1, urnet_add_auth_cb a2, Pointer a3);
  long urnet_api_add_auth_logout_listener(long a0, urnet_auth_logout_cb a1, Pointer a2);
  long urnet_api_add_jwt_refresh_listener(long a0, urnet_jwt_refresh_cb a1, Pointer a2);
  void urnet_api_auth_code_create(long a0, String a1, urnet_auth_code_create_cb a2, Pointer a3);
  void urnet_api_auth_code_login(long a0, String a1, urnet_auth_code_login_cb a2, Pointer a3);
  void urnet_api_auth_login(long a0, String a1, urnet_auth_login_cb a2, Pointer a3);
  void urnet_api_auth_login_with_password(long a0, String a1, urnet_auth_login_with_password_cb a2, Pointer a3);
  void urnet_api_auth_network_client(long a0, String a1, urnet_auth_network_client_cb a2, Pointer a3);
  Pointer urnet_api_auth_network_client_sync(long a0, String a1, PointerByReference a2);
